# Sketching-in-CAD

./: CMakeLists.txt  README.md  hatchingtool.cpp  hatchingtool.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintview.cpp  paintview.h  penciltool.cpp  penciltool.h  scribblearea.cpp  scribblearea.h  tool.cpp  tool.h
